--- a/scss/components/_presupuesto.scss
+++ b/scss/components/_presupuesto.scss
@@ -4,13 +4,16 @@
   .formularioFlodi {
     text-align: center;
     font-size: 150%;
-    font-family: Dancing Script;
+    font-family: 'Amatic SC', cursive;
   }
   
   .formularioM {
     width: 50%;
   }
-  
+  .formEmail {
+    font-family: 'Amatic SC', cursive;
+    font-size: 150%;
+  }
   .Mflex {
     display: flex;
   }
