--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,4 @@
-@import 'components/header';
-@import 'components/section';
-@import 'components/main';
-@import 'components/footer';
+@import 'components/index';
 @import 'components/trabajos';
 @import 'components/presupuesto';
-@import 'base/mediaquery'
+@import 'base/mediaquery';
